--- a/static/style.css
+++ b/static/style.css
@@ -3,11 +3,14 @@
    padding: 0;
 }
 
+/* HEADER START */
+
 header {
-   background: rgba(27, 170, 118, 0.355)000;
+   background: rgba(27, 170, 82, 0.355)000;
    border-bottom-left-radius: 30px;
    border-bottom-right-radius: 30px;
    z-index: 2;
+   padding: 10px 0 10px 0;
 }
 
 .wrap {
@@ -22,8 +25,10 @@ header {
 }
 
 .logo {
-   max-width: 80px;
+   padding-left: 30px;
+   max-width: 60px;
    opacity: 60%;
+   padding-right: 10px;
 }
 
 .nav_title {
@@ -46,6 +51,8 @@ header {
    top: 2px;
    background: rgba(13, 115, 38, 0.355)000;
 }
+
+/* HEADER END */
 
 /* POP UP */
 
@@ -116,35 +123,66 @@ header {
 
 /* POP UP */
 
-.section {
-   margin-top: 250px;
+/* SEND START */
+
+.send_message {
+   position: absolute;
+   bottom: 0;
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   grid-gap: 30px;
+   align-items: center;
+   margin-left: 250px;
 }
 
-.section_text {
-   font-family: 'Julius Sans One', sans-serif;
-   text-align: center;
-   font-size: 16px;
-   opacity: 70%;
-}
-
-
-.btn_send {
-   margin-top: 250px;
-}
-
-.btn_send_wrap {
-   text-align: center;
-}
-
-.own_btn {
-   text-decoration: none;
-   color: #000;
-   background: #d88989;
+.input-message {
+   width: 700px;
+   padding: 18px 26px;
+   margin: 8px 0;
+   box-sizing: border-box;
+   border: none;
    border-radius: 10px;
-   padding: 20px 200px;
+   background: rgba(27, 170, 82, 0.128);
+   margin-left: 50px;
+   margin-bottom: 30px;
 }
 
-.own_btn:active {
-   position: relative;
-   top: 2px;
+.input-message:active,
+.input-message:focus {
+   border: none;
+   background: rgba(27, 170, 82, 0.246);
+   outline: none;
 }
+
+.btn_message {
+   font-family: 'Julius Sans One', sans-serif;
+   margin-right: 50px;
+   color: #fff;
+   text-decoration: none;
+   background: rgba(12, 131, 42, 0.355);
+   padding: 28px 30px 5px 30px;
+   border-radius: 10px;
+
+}
+
+.container {
+   display: flex;
+   flex-direction: column-reverse;
+   justify-content: flex-end;
+   height: 100vh;
+   padding-bottom: 50px;
+}
+
+.PersonMessege {
+   width: 50%;
+   background-color: rgba(0, 0, 0, 0.8);
+   border: 2px solid #3e4852;
+   color: #f0f0f0;
+   padding: 10px;
+   margin-top: 10px;
+   border-radius: 0.5rem;
+   left: 45%;
+   position: relative
+}
+
+/* SEND END */
