--- a/static/style.css
+++ b/static/style.css
@@ -57,6 +57,7 @@ header {
 /* POP UP */
 
 .pop_up {
+   z-index: 3;
    position: fixed;
    top: 0;
    left: 0;
@@ -126,13 +127,12 @@ header {
 /* SEND START */
 
 .send_message {
-   position: absolute;
-   bottom: 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
-   grid-gap: 30px;
+   grid-gap: 10px;
    align-items: center;
    margin-left: 250px;
+   position: fixed;
 }
 
 .input-message {
@@ -145,6 +145,7 @@ header {
    background: rgba(27, 170, 82, 0.128);
    margin-left: 50px;
    margin-bottom: 30px;
+   z-index: 2;
 }
 
 .input-message:active,
@@ -160,36 +161,30 @@ header {
    color: #fff;
    text-decoration: none;
    background: rgba(12, 131, 42, 0.355);
-   padding: 28px 30px 5px 30px;
+   padding: 28px 20px 6px 20px;
    border-radius: 10px;
-
 }
 
 .container {
-   display: flex;
+   /*display: flex;
    flex-direction: column-reverse;
    justify-content: flex-end;
-   height: 100vh;
-   padding-bottom: 50px;
+   padding-bottom: 50px;*/
+   overflow-y: auto;
+   height: 78vh;
 }
 
-.PersonMessege {
+.Messege {
    width: 50%;
-   background-color: rgba(0, 0, 0, 0.8);
-   border: 2px solid #3e4852;
-   color: #f0f0f0;
+   background-color: rgba(209, 248, 212, 1);
+   border: none;
+   color: rgb(88, 88, 87);
    padding: 10px;
    margin-top: 10px;
    border-radius: 0.5rem;
    left: 45%;
-   position: relative
+   position: relative;
 }
+
 
 /* SEND END */
-
-
-
-
-.hidden {
-   display: none;
-}
