Add neural network to determine recycle material from image. Add requirements file.
This uses a roboflow model to determine the material type. The model is licensed under CC-BY 4.0
The model can be found here:
https://universe.roboflow.com/material-identification/garbage-classification-3
Also:
adds a roboflow dependency. Use pip install roboflow.
this commit also adds a requirements.txt file that allows you to install all the dependencies using the command line command "pip install -r requirements.txt"

--- a/static/media.css
+++ b/static/media.css
@@ -19,4 +19,9 @@
    .btn_message {
       padding: 18px 20px 14px 20px;
    }
+   
+   .camera-input-label {
+	   
+	   padding: 18px 20px 14px 20px;
+   }
 }
