--- a/static/style.css
+++ b/static/style.css
@@ -128,7 +128,7 @@ header {
 
 .send_message {
    display: grid;
-   grid-template-columns: repeat(2, 1fr);
+   grid-template-columns: 1fr 1fr 8fr;
    grid-gap: 10px;
    align-items: center;
    margin-left: 250px;
@@ -157,7 +157,7 @@ header {
 
 .btn_message {
    font-family: 'Julius Sans One', sans-serif;
-   margin-right: 50px;
+   margin-right: 0px;
    color: #fff;
    text-decoration: none;
    background: rgba(12, 131, 42, 0.355);
@@ -184,6 +184,40 @@ header {
    border-radius: 0.5rem;
    left: 45%;
    position: relative;
+}
+
+.imgMessege {
+	position:relative; 
+	display:flex; 
+	width: 50%;
+	height:50%;
+	background-color: rgba(209, 248, 212, 1);
+	border: none;
+	color: rgb(88, 88, 87);
+	padding: 10px;
+	margin-top: 10px;
+	border-radius: 0.5rem;
+	left: 45%;
+	position: relative;
+}
+
+
+#camera-output {
+	position:relative; 
+	margin-left:auto;
+	margin-right:auto;
+	max-width:100%;
+	max-height:100%;
+}
+
+.camera-input-label {
+	font-family: 'Julius Sans One', sans-serif;
+	margin-right: 50px;
+	color: #fff;
+	text-decoration: none;
+	background: rgba(12, 131, 42, 0.355);
+	padding: 28px 20px 6px 20px;
+	border-radius: 10px;
 }
 
 
